# Stepwise-Forecast-Constructor

./: LICENSE  README.md  REDME.md  engin.py  example.ipynb  pyproject.toml
src/engin/: __init__.py  core.py  demo.py
src/engin/data/: data_for_test.json
src/engin_auto_forecast.egg-info/: PKG-INFO  SOURCES.txt
