[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "engin-auto-forecast"
version = "0.1.1"
description = "Automatic step-by-step time series forecast engine"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas",
  "scikit-learn",
  "statsmodels"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
engin = ["data/*.json"]
